# templar

./: .clang-format  CMakeLists.txt  LICENSE
docs/: grammar.txt
include/templar/lexer/: Lexer.hpp  Token.hpp
src/: CMakeLists.txt
src/lexer/: Lexer.cpp
templates/cpp-project/: lib_cmakelists.templ  root_clang-format.templ  root_cmakelists.templ  scripts_clang-format.templ  spec.yaml  src_cmakelists.templ  src_main.templ  tests_cmakelists.templ
tests/: CMakeLists.txt  LexerTests.cpp
