Include(FetchContent)

FetchContent_Declare(
  Catch2
  GIT_REPOSITORY https://github.com/catchorg/Catch2.git
  GIT_TAG        v3.11.0
)
FetchContent_MakeAvailable(Catch2)
list(APPEND CMAKE_MODULE_PATH ${catch2_SOURCE_DIR}/extras)

include(CTest)
include(Catch)
enable_testing()

add_executable(
    unittests
    LexerTests.cpp
)

target_link_libraries(
    unittests
    PRIVATE
    templar::lib
    Catch2::Catch2WithMain
)

catch_discover_tests(unittests)
